# ChangeLog for dev-libs/dietlibc
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/dietlibc/ChangeLog,v 1.11 2003/03/31 10:45:10 aliz Exp $

*dietlibc-0.22-r1 (30 Mar 2003)

  30 Mar 2003; Daniel Ahlberg <aliz@gentoo.org> dietlibc-0.22-r1.ebuild :
  Forgot to apply a patch. Applied patch is from Debian's dietblic-0.22-2 release.

*dietlibc-0.22 (28 Mar 2003)

  28 Mar 2003; Guy Martin <gmsoft@gentoo.org> dietlibc-0.22.ebuild :
  Added ~hppa to KEYWORDS.

  28 Mar 2003; Daniel Ahlberg <aliz@gentoo.org> dietlibc-0.22.ebuild :
  Security update.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*dietlibc-0.21 (29 Oct 2002)


  29 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump. Ebuild contributed by fridtjof@fbunet.de, ppc patch by 
  Nicolas Kaiser <nikai@nikai.net>. All in #9484

*dietlibc-0.20 (27 Sep 2002)
  Version bump that includes security fix. Ebuild contributed by fridtjof@fbunet.de.

*dietlibc-0.16 (29 Mar 2002)

  29 Mar 2002; Thilo Bangert <bangert@gentoo.org> ChangeLog :

  completely reworked ebuild


*dietlibc-0.16 (28 Mar 2002)

  28 Mar 2002; Thilo Bangert <bangert@gentoo.org> ChangeLog :

  bumped version, use emake || die instead of try make