@@ -1,0 +1,14 @@
+MD5 b72734fb6fa1c20f8d0b78acd59acc72 dietlibc-0.22-r1.ebuild 1141
+MD5 10b00225ac599254cbf6b4a062694ed9 dietlibc-0.20.ebuild 997
+MD5 ecd18f67d71c47acf216ad2643d559a3 dietlibc-0.16.ebuild 997
+MD5 ec7fc0f7deae5b1b6aa4f5a9bc95b8e3 dietlibc-0.22.ebuild 1091
+MD5 747b686f1aa7db7f8e73f6bae2d64753 dietlibc-0.22-r2.ebuild 1188
+MD5 3d1c2ec06005909bc7669f3b24f2dfc6 ChangeLog 1459
+MD5 6ac3d10f20fdc042b5dc51ee32180112 dietlibc-0.21.ebuild 1069
+MD5 2644f8611fcb7a147ec9ef76eaf5992a files/digest-dietlibc-0.22-r1 66
+MD5 2644f8611fcb7a147ec9ef76eaf5992a files/digest-dietlibc-0.22-r2 66
+MD5 67b93dd4033c0e66d42b6bade33c73fc files/dietlibc-0.22_xdr_security_fix.patch 5566
+MD5 ad60ceed0734f3675846105fb63272de files/digest-dietlibc-0.16 66
+MD5 3ed5df794190d860ed03567fb1c1a0de files/digest-dietlibc-0.20 66
+MD5 071556303cd2740fe38e5c605a0ea8cc files/digest-dietlibc-0.21 66
+MD5 2644f8611fcb7a147ec9ef76eaf5992a files/digest-dietlibc-0.22 66
