@@ -1,0 +1,1 @@
+MD5 877b12ab0b2bbff340095cf2cf074418 dietlibc-0.22.tar.bz2 454012
