@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/dietlibc
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/dietlibc/ChangeLog,v 1.11 2003/03/31 10:45:10 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/dietlibc/ChangeLog,v 1.12 2003/05/14 20:11:55 johnm Exp $
+
+*dietlibc-0.22-r2 (14 May 2003)
+
+  14 May 2003; John Mylchreest <johnm@gentoo.org>; dietlibc-0.22-r2.ebuild:
+  Updated dietlibc to compile with -fstack-protector
 
 *dietlibc-0.22-r1 (30 Mar 2003)
 
